--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -12,7 +12,7 @@
 </head>
 <body class="pt-7">
 
-<nav th:fragment="nav-fragment" class="navbar navbar-expand-md navbar-dark bg-primary bg-gradient fixed-top">
+<nav th:fragment="nav-fragment" id="globalNavbar" class="navbar navbar-expand-md navbar-dark bg-primary bg-gradient fixed-top">
     <div class="container-fluid" id="navBarContainer">
         <a class="navbar-brand text-light" href="/board/list/all" aria-current="page" id="navHeader">게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,18 +42,18 @@
                         <form class="container-fluid loginBtBox">
                             <button class="btn btn-sm btn-light me-2" type="button"
                                     onclick="location.href='loginForm.html'"
-                                    th:onclick="|location.href='@{/login}'|">로그인</button>
-                            <button class="btn btn-sm btn-light" type="button"
-                                    onclick="location.href='addForm.html'"
-                                    th:onclick="|location.href='@{/member/add}'|">회원가입</button>
+                                    th:onclick="|location.href='@{/login}'|">로그인 / 회원가입</button>
+<!--                            <button class="btn btn-sm btn-light" type="button"-->
+<!--                                    onclick="location.href='addForm.html'"-->
+<!--                                    th:onclick="|location.href='@{/member/add}'|">회원가입</button>-->
                         </form>
                     </li>
-                    <li id="loginMessage" class="nav-item" sec:authorize="hasRole('ROLE_USER')">
+                    <li id="loginMessage" class="nav-item" sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_ADMIN')">
                             <span class="navbar-text" th:text="|${#authentication.name}님 로그인 되었습니다.|">
                                 login message
                             </span>
                     </li>
-                    <li class="nav-item" sec:authorize="hasRole('ROLE_USER')">
+                    <li class="nav-item" sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_ADMIN')">
                         <form class="container-fluid loginBtBox">
                             <button class="btn btn-sm btn-light me-2" type="button"
                                     th:onclick="|location.href='@{/member/mypage/myboard}'|" id="memberEditBt">마이 페이지</button>
