--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -43,6 +43,7 @@
         }
 
         #oAuth2LoginBox {
+            padding: 5px;
             margin-top: 30px;
             text-align: center;
             border: solid 1px lightgray;
@@ -104,8 +105,8 @@
         const isValidRequest = [[${session.isValidRequest}]];
         /*]]>*/
 
-        console.log("message = " + message + " redirectURL = " + redirectURL
-            + " isValidRequest = " + isValidRequest + "isCatched = " + isCatched);
+        // console.log("message = " + message + " redirectURL = " + redirectURL
+        //     + " isValidRequest = " + isValidRequest + "isCatched = " + isCatched);
 
         // Spring security 에 의해 catch 된 login 요청인지 확인
         if (isCatched == "true") {
@@ -152,21 +153,21 @@
         <div class="d-flex justify-content-center" id="buttonBox">
             <button type="submit" class="btn btn-primary bg-gradient"> 로그인 </button>
             <button onclick="location.href='list.html'"
-                    th:onclick="|location.href='@{/board/list}'|"
-                    type="button" class="btn btn-primary bg-gradient">취소</button>
+                    th:onclick="|location.href='@{/member/add}'|"
+                    type="button" class="btn btn-primary bg-gradient"> 회원가입 </button>
         </div>
         <div id="oAuth2LoginBox">
             <span id="oAuth2LoginHeader"> 소셜 계정으로 로그인 / 회원가입</span>
             <div id="oAuth2LoginBtWrapper">
                 <button type="button" onclick="location.href='/oauth2/authorization/google'"
                         class="btn">
-                    <img th:src="@{/image/google_small.png}" src="/static/image/google_small.png" height="40px" alt="구글">
+                    <img th:src="@{/image/google_small.png}" src="/static/image/google_small.png" width="90px" height="40px" alt="구글">
                 </button>
                 <button id="naverLoginBt" type="button" onclick="location.href='/oauth2/authorization/naver'" class="btn">
-                    <img th:src="@{/image/naver_small.png}" src="/static/image/naver_small.png.png" alt="네이버"  height="40px">
+                    <img th:src="@{/image/naver_small.png}" src="/static/image/naver_small.png.png" alt="네이버" width="100px" height="40px">
                 </button>
                 <button id="kakaoLoginBt" type="button" onclick="location.href='/oauth2/authorization/kakao'" class="btn">
-                    <img th:src="@{/image/kakao_small.png}" src="/static/image/kakao_small.png.png" alt="카카오"  height="40px">
+                    <img th:src="@{/image/kakao_small.png}" src="/static/image/kakao_small.png.png" alt="카카오"  width="100px" height="40px">
                 </button>
             </div>
         </div>
