--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -27,12 +27,12 @@
 
         #info > li {
             float: left;
-            width: 22%;
+            width: 25%;
             line-height: 40px;
         }
 
         #info > li:first-child {
-            width: 12%;
+            width: 0;
         }
 
         .dropdown {
@@ -55,6 +55,8 @@
             border-bottom-right-radius: 0;
             border-bottom-left-radius: 0;
             margin-left: 0px;
+
+            transition: background-color 1000ms linear;
         }
 
         #commentContainer .other-comment-reply .comment-username {
@@ -143,6 +145,10 @@
             display: none;
         }
 
+        #container #commentContainer .highlighted {
+            background-color: darkorange;
+        }
+
 
     </style>
     <script src="https://code.jquery.com/jquery.min.js"></script>
@@ -170,6 +176,21 @@
                 console.error( 'ckeditor 에러' );
                 console.error( error );
             } );
+
+            let selectedCommentId = $("#selectedCommentId").data("selectedcommentid");
+            console.log("selectedCommentId = " + selectedCommentId);
+
+            // myComment 에서 넘어왔을때, comment highlight
+            if (selectedCommentId) {
+                let $selectedComment = $("#comment" + selectedCommentId).find(".comment-username");
+
+                $selectedComment[0].scrollIntoView();
+                $selectedComment.addClass("highlighted");
+
+                setTimeout(function () {
+                    $selectedComment.removeClass("highlighted");
+                }, 1000)
+            }
 
             // 답글 로드 (reply 속성 적용 및 위치변경)
             $(".other-comment").each(function (index, item) {
@@ -532,8 +553,6 @@
 
         <ul id="info">
             <li th:data-boardId="${board.id}">
-                <span>번호: </span>
-                <span th:text="${board.id}">번호</span>
             </li>
             <li>
                 <span>카테고리: </span>
@@ -700,6 +719,8 @@
     <div style="display: none" id="message">
         <div style="display: none" th:if="${commentMessage}" th:data-message="${commentMessage}"></div>
     </div>
+
+    <div style="display: none" id="selectedCommentId" th:data-selectedcommentid="${selectedCommentId}"></div>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
