--- a/src/main/resources/templates/member/infoForm.html
+++ b/src/main/resources/templates/member/infoForm.html
@@ -54,6 +54,11 @@
     <script>
         $(document).ready(function () {
 
+            let alertMessage = $("#globalAlertMessage").data("alertmessage");
+            if (alertMessage) {
+                alert(alertMessage);
+            }
+
             // 내부 네비바 active
             $(".nav-pills .nav-link").on({
                 mouseenter: function () {
@@ -227,6 +232,8 @@
 
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
+
+    <div id="globalAlertMessage" th:data-alertmessage="${alertMessage}"></div>
 
     <div>
         <h2 id="headerText"> 마이 페이지 > 내 정보 </h2>
