--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -86,7 +86,7 @@
             let alertMessage = $("#globalAlertMessage").data("alertmessage");
             let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
 
-            console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
+            // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
 
             if (alertMessage) {
                 // 홈화면(/board/list/all) 추가동작
